fix: improved dark mode and narrow device render

--- a/src/css/tables.css
+++ b/src/css/tables.css
@@ -134,3 +134,42 @@ table tr:nth-child(2n) {
 .equal-width-columns table th {
   width: 1%;
 }
+
+
+@media screen and (max-width: 512px) {
+  table, .symbols-table table, .first-column-header table, .equal-width-columns table {
+    display: block;
+    width: 100%;
+  }
+
+  table th, table td {
+    border: none;
+  }
+
+  table tr {
+    display: block;
+    margin-bottom: 0.5em;
+    border-bottom: 1px solid var(--table-thin-line-color);
+    padding-bottom: 0.5em;
+  }
+
+  table tr td {
+    display: block;
+    width: 100%;
+    text-align: right;
+    padding: 2px 8px;
+    padding-left: 1em;
+  }
+
+  table tr td:first-child {
+    text-align: left;
+    font-weight: bold;
+    padding-left: 0;
+  }
+
+  .symbols-table table tr td:first-child a {
+    display: inline-block;
+    width: auto;
+    margin: 0;
+  }
+}
